    it replaces these with the equivalent left censored value.)
    Addresses github issue 234.
    \item Change the default confidence intervals to "plain" for plots
    of the cumulative hazard, which concurs with the default of "log" for
    the survival curve.
    \item Add the braking data as part of the 'reliability' bundle.
}}
\section{Changes in version 3.7-0}{
  \itemize{
    \item Add n.id element to the coxph object, for a call that uses the
    id argument
    \item Remove as.integer.Surv and as.numeric.Surv; essentially treat Surv as
a matrix for this purpose.  (The as.numeric.Surv method never worked anyway, as
it should have been as.double.Surv).
    \item Run all tests and submit to CRAN
}}
\section{Changes in version 3.6-5}{
  \itemize{
    \item Update nearly all uses of partially matched arguments, e.g.,
    fit$coef to fit$coefficients. (MichaelChirico)
    \item Fix error in concordance for a coxph model with (time1, time2)
    data and timewt='S'.  Add new test to tests/concordance3.R. Error
    pointed out by Shaunson26.
    \item Begin movement of many vignettes to the survivalVignettes
    package. See the "other vignettes" vignette stub for more
    information.
    \item Fix error in predict.coxph pointed out by Julianna
    Harwood. Add text to the help file to clarify prediction at per-subject
    vs a global time.  Add new test file predsurv.R
    \item Add a data.frame option to summary.survfit and summary.survfitms;
    it causes the result to be in data frame form.
}}
\section{Changes in version 3.6-4}{
  \itemize{
    \item Oversight in final CRAN submission, change version number and
    resubmit
}}
\section{Changes in version 3.6-3}{
  \itemize{
    \item Fix small bug in residuals.survfit wrt labeling rows of the
    output.  Update helpfile to describe the dimnames.
    \item Submit to CRAN
}}
\section{Changes in version 3.6-2}{
  \itemize{
    \item Change survfitaj.c to avert a spurious compiler warning which