@@ -11,7 +11,7 @@
  conf.offset=.012,
  conf.type = c("log", "log-log", "plain", "logit", "arcsin"),
  mark, noplot="(s0)", cumhaz=FALSE,
- firstx, ymin, \dots)
+ firstx, ymin, cumprob=FALSE, \dots)
 }
 \arguments{
   \item{x}{
@@ -150,13 +150,20 @@
     argument}
   \item{firstx}{this will normally be given as part of the \code{xlim}
     argument.}
+  \item{cumprob}{for a multi-state curve, plot the probabilities in
+    state 1, (state1 + state2), (state1 + state2 + state3), \ldots.
+    If \code{cumprob} is an integer vector the totals will be in the
+    order indicated. }
   \item{\dots}{other arguments that will be passed forward to the
     underlying plot method, such as xlab or ylab.}
 }
 \value{
 a list with components \code{x} and \code{y}, containing the coordinates of the last point 
 on each of the curves (but not the confidence limits).   
-This may be useful for labeling. 
+This may be useful for labeling.
+If \code{cumprob=TRUE} then \code{y} will be a matrix with one row per
+curve and \code{x} will be all the time points.  This may be useful for
+adding shading.
 }
 \description{
 A plot of survival curves is produced, one curve for each strata. 
